# emu-runner

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: contexts.rs  includes.rs  lib.rs
src/contexts/: bizhawk.rs  fceux.rs  gens.rs
src/includes/: start-bizhawk.sh
